tests/liberr/libs/__snapshots__/jsfmt.spec.js.snap
exports[`test parse_error.js 1`] = `
"/**
 * @flow
 */
declare class ExampleClass {

  methodA: () => any // parse error, missing comma

  methodB: () => any

}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/**
 * @flow
 */
// parse error, missing comma
declare class ExampleClass { methodA: : () => any, methodB: : () => any }
"
`;

exports[`test type_error.js 1`] = `
"// @flow
declare function foo(x: number): Array;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
// @flow
declare function foo(x: number): Array;
"
`;
